feat: k8s: api sealed secrets

--- a/kubernetes/sisyphus-api/deployment.yaml
+++ b/kubernetes/sisyphus-api/deployment.yaml
@@ -23,3 +23,13 @@ spec:
               value: "prod"
             - name: PORT
               value: "8080"
+            - name: JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: credentials
+                  key: jwt-secret
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: credentials
+                  key: db-url
