--- a/kubernetes/sisyphus-api/ingress.yaml
+++ b/kubernetes/sisyphus-api/ingress.yaml
@@ -9,6 +9,8 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
+
+    nginx.ingress.kubernetes.io/priority: "200"
 spec:
   ingressClassName: nginx
   tls:
